--- a/catalog.html
+++ b/catalog.html
@@ -34,12 +34,6 @@
 	<link href="css/responsive.css" type="text/css" rel="stylesheet">
 	
 <style type="text/css">
-/* TODO: убрать 
-
-для разрешения (где продукция расставляется в 2 ряда - увеличиваем и задаем жестко height)
-возможно центрировать картинку по центру (хотя не факт, не так уж оно и часто)
-
-*/
 
 
 </style>
@@ -99,9 +93,9 @@
 							<li class="top-menu-item-sep"><div class="top-menu-sep"></div></li>
 							<li class="top-menu-item"><a href="about.html"><span class="item-href">О компании</span></a></li>
 							<li class="top-menu-item-sep"><div class="top-menu-sep"></div></li>							
-							<li class="top-menu-item"><a href="catalog.html"><span class="item-href">Продукция</span></a></li>
+							<li class="top-menu-item item-active"><a href="catalog.html"><span class="item-href">Продукция</span></a></li>
 							<li class="top-menu-item-sep"><div class="top-menu-sep"></div></li>
-							<li class="top-menu-item item-active"><a href="contacts.html"><span class="item-href">Контакты</span></a></li>
+							<li class="top-menu-item"><a href="contacts.html"><span class="item-href">Контакты</span></a></li>
 						</ul>
 					</div>
 				</div>
@@ -154,27 +148,31 @@
 							
 						<div class="catalog-container container-fluid debug">
 							<div class="row">
+									
 									<div class="catalog-item col-lg-6 col-md-6 col-sm-6 col-xs-12">
-										<h2>
-											<a href="product.html">
-												<table border="1" width="100%">
-													<tr>
-														<td>
-															<span class="item-img inline-block">
-																<img src="images/008.jpg" alt="" title="" >
-															</span>
-														</td>
-														<td>
-															<span class="item-name inline-block">Проволока стальная низкоуглеродистая для армирования железо-бетонных конструкций ВР-1 ГОСТ&nbsp;6727-80
-															</span>
-														</td>
-													</tr>
-												</table>
-											</a>
-										</h2>
+										<div class="catalog-cell">
+											<h2>
+												<a href="product.html">
+													<table border="1" width="100%">
+														<tr>
+															<td>
+																<span class="item-img inline-block">
+																	<img src="images/008.jpg" alt="" title="" >
+																</span>
+															</td>
+															<td>
+																<span class="item-name inline-block">Проволока стальная низкоуглеродистая для армирования железо-бетонных конструкций ВР-1 ГОСТ&nbsp;6727-80
+																</span>
+															</td>
+														</tr>
+													</table>
+												</a>
+											</h2>
+										</div>
 									</div>
 
 									<div class="catalog-item col-lg-6 col-md-6 col-sm-6 col-xs-12">
+										<div class="catalog-cell">
 										<h2>
 											<a href="product.html">
 												<table border="1" width="100%">
@@ -192,9 +190,11 @@
 												</table>
 											</a>
 										</h2>
+										</div>
 									</div>
 
 									<div class="catalog-item  col-lg-6 col-md-6 col-sm-6 col-xs-12">
+										<div class="catalog-cell">
 										<h2>
 											<a href="product.html">
 												<table border="1" width="100%">
@@ -213,6 +213,7 @@
 
 											</a>
 										</h2>
+										</div>
 									</div>
 
 
