catalog resp -ok

--- a/catalog.html
+++ b/catalog.html
@@ -146,8 +146,8 @@
 							<h1>Наша продукция</h1>
 						</div>	
 							
-						<div class="catalog-container container-fluid debug">
-							<div class="row">
+						<div class="container-fluid catalog-container  debug">
+							<div class="row ">
 									
 									<div class="catalog-item col-lg-6 col-md-6 col-sm-6 col-xs-12">
 										<div class="catalog-cell">
