cataloog-ok todo catalog-data

--- a/catalog.html
+++ b/catalog.html
@@ -153,7 +153,7 @@
 										<div class="catalog-cell">
 											<h2>
 												<a href="product.html">
-													<table border="1" width="100%">
+													<table border="0" width="100%">
 														<tr>
 															<td>
 																<span class="item-img inline-block">
@@ -175,7 +175,7 @@
 										<div class="catalog-cell">
 										<h2>
 											<a href="product.html">
-												<table border="1" width="100%">
+												<table border="0" width="100%">
 													<tr>
 														<td>
 															<span class="item-img inline-block">
@@ -197,7 +197,7 @@
 										<div class="catalog-cell">
 										<h2>
 											<a href="product.html">
-												<table border="1" width="100%">
+												<table border="0" width="100%">
 													<tr>
 														<td>
 															<span class="item-img inline-block">
@@ -224,16 +224,16 @@
 						<div class="price-list-block">
 							 <div class="price-list-block-pad">
 								 <p class="title">Скачать <span class="subtitle">прайс-листы</span></p>
-								 <div class="price-item nav-link">
+								 <div class="price-item">
 									<a href="http://www.ugps.dn.ua/upload/iblock/cfa/torg.oborudovanie.pdf" target="_blank">Цены на торговое оборудование&nbsp;(pdf, 122 KB)</a>
 								</div>
-								<div class="price-item nav-link">
+								<div class="price-item">
 									<a href="http://www.ugps.dn.ua/upload/iblock/e68/provoloka.pdf" target="_blank">Цены на проволоку&nbsp;(pdf, 166 KB)</a>
 								</div>
-								<div class="price-item nav-link">
+								<div class="price-item">
 									<a href="http://www.ugps.dn.ua/upload/iblock/abe/setki.pdf" target="_blank">Цены на сетку&nbsp;(pdf, 153 KB)</a>
 								</div>
-								<div class="price-item nav-link">
+								<div class="price-item">
 									<a href="http://www.ugps.dn.ua/upload/iblock/76f/mach.krepez.pdf" target="_blank">Цены на машиностроительный крепеж&nbsp;(pdf, 3.1 MB)</a>
 								</div>
 							</div>
