--- a/catalog.html
+++ b/catalog.html
@@ -364,18 +364,27 @@
 						 
 						<div class="price-list-block">
 							 <div class="price-list-block-pad">
+
 								 <p class="title">Скачать <span class="subtitle">прайс-листы</span></p>
-								 <div class="price-item">
-									<a href="http://www.ugps.dn.ua/upload/iblock/cfa/torg.oborudovanie.pdf" target="_blank">Цены на торговое оборудование&nbsp;(pdf, 122 KB)</a>
+
+
+								<div class="price-item">
+									<a href="upload/provoloka_export.pdf" target="_blank">Цены на проволоку - Экспорт (pdf, 139 KB)</a>
+								</div>								 
+
+								
+								<div class="price-item">
+									<a href="upload/torg.oborudovanie.pdf" target="_blank">Цены на торговое оборудование&nbsp;(pdf, 122 KB)</a>
+								</div>								 
+
+								<div class="price-item">
+									<a href="upload/provoloka.pdf" target="_blank">Цены на проволоку&nbsp;(pdf, 166 KB)</a>
 								</div>
 								<div class="price-item">
-									<a href="http://www.ugps.dn.ua/upload/iblock/e68/provoloka.pdf" target="_blank">Цены на проволоку&nbsp;(pdf, 166 KB)</a>
+									<a href="upload/setki.pdf" target="_blank">Цены на сетку&nbsp;(pdf, 153 KB)</a>
 								</div>
 								<div class="price-item">
-									<a href="http://www.ugps.dn.ua/upload/iblock/abe/setki.pdf" target="_blank">Цены на сетку&nbsp;(pdf, 153 KB)</a>
-								</div>
-								<div class="price-item">
-									<a href="http://www.ugps.dn.ua/upload/iblock/76f/mach.krepez.pdf" target="_blank">Цены на машиностроительный крепеж&nbsp;(pdf, 3.1 MB)</a>
+									<a href="upload/mach.krepez.pdf" target="_blank">Цены на машиностроительный крепеж&nbsp;(pdf, 3.1 MB)</a>
 								</div>
 							</div>
 						</div>
