--- a/product.html
+++ b/product.html
@@ -101,9 +101,9 @@
 							<li class="top-menu-item-sep"><div class="top-menu-sep"></div></li>
 							<li class="top-menu-item"><a href="about.html"><span class="item-href">О компании</span></a></li>
 							<li class="top-menu-item-sep"><div class="top-menu-sep"></div></li>							
-							<li class="top-menu-item"><a href="catalog.html"><span class="item-href">Продукция</span></a></li>
+							<li class="top-menu-item item-active"><a href="catalog.html"><span class="item-href">Продукция</span></a></li>
 							<li class="top-menu-item-sep"><div class="top-menu-sep"></div></li>
-							<li class="top-menu-item item-active"><a href="contacts.html"><span class="item-href">Контакты</span></a></li>
+							<li class="top-menu-item"><a href="contacts.html"><span class="item-href">Контакты</span></a></li>
 						</ul>
 					</div>
 				</div>
@@ -172,10 +172,10 @@
 	<!-- #header -->	
 
 
-	<div class="page-content-block">
+	<div class="row page-content-block">
 
 
-		<div class="page-content-block-pad">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 page-content-block-pad">
 			<div class="top-promo-block">
 				<div class="top-promo-block-pad">
 					<img src="images/inner.jpg" width="100%" border="0">
@@ -405,7 +405,7 @@
 										<tr>
 											<td class="add-td-right">
 												<div class="uniform-input-wrap">
-												<input name="FIELDS[NAME][0]" maxlength="255" class="inputtext _req-string _text" type="text" size="40">
+												<input name="FIELDS[NAME][0]" maxlength="255" class="inputtext req-string text" type="text" size="60">
 												</div><br>
 											</td>
 										</tr>
@@ -442,7 +442,7 @@
 										</tr>
 										<tr>
 											<td class="add-td-right">
-												<textarea class="inputtextarea uniform" name="FIELDS[PREVIEW_TEXT][0]" cols="30" rows="5"></textarea>
+												<textarea class="inputtextarea uniform" name="FIELDS[PREVIEW_TEXT][0]" cols="40" rows="5"></textarea>
 											</td>
 										</tr>
 										<tr>
