--- a/about.html
+++ b/about.html
@@ -277,7 +277,7 @@
 				<!-- #content -->
 
 				<!-- aside -->	
-				<div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 debug-green">
+				<div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
 					<!-- right-menu-box -->
 		
 					<div class="row">
