--- a/catalog.html
+++ b/catalog.html
@@ -142,7 +142,7 @@
 							<h1>Наша продукция</h1>
 						</div>	
 							
-						<div class="container-fluid catalog-container  debug">
+						<div class="container-fluid catalog-container">
 							<div class="row ">
 							
 							<!-- -->
