page.htm like home

--- a/home.html
+++ b/home.html
@@ -153,14 +153,16 @@
 					</div>	
 				</div>
 			</div>
-			<!--mobile-contacts-block -->
+			<!--mobile-contacts-block
 			
 		</div>
 		<!-- # contacts -->
 	
 	</div>
+	
 	<!-- #header -->	
-
+	
+	<!-- #header -->	
 <!-- main -->	
 	<div class="page-content-block">
 		<div class="page-content-block-pad">
@@ -275,6 +277,11 @@
 			
 		</div>
 		<!-- #top-promo-block -->
+
+
+<!-- main contant -->
+<div class="row">
+	<div class="col-lg-8 col-md-12 col-sm-12 col-xs-12">
 		
 		<div class="workarea-column-block">
 			<div class="workarea-column-block-pad">
@@ -345,8 +352,9 @@
 			<div class="clear"></div>
 			</div>
 		</div>
+	</div>	
+	<div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">	
 		
-		<aside>
 			<!-- right-column-block -->
 			<div class="right-column-block">
 			
@@ -474,14 +482,14 @@
 
 			</div>
 		
-		</aside>	
 		
-		<div class="clear"></div>
-		</div>
-		<!-- # right-column-block -->
+		
+		
 	</div>
-	<!-- #main -->
-	 
+		<!-- # right-column-block -->
+</div>
+<!-- #main -->
+	 </div>
 		<!-- #page-content-block -->
 	<!-- #page-content-block -->
 
