home done product table some damn

--- a/about.html
+++ b/about.html
@@ -95,9 +95,9 @@
 				<div class="top-menu-block-pad">
 					<div class="top-menu-box">
 						<ul class="top-menu">
-							<li class="top-menu-item item-active"><a href="/"><span class="item-no-href">Главная</span></a></li>
+							<li class="top-menu-item"><a href="/"><span class="item-no-href">Главная</span></a></li>
 							<li class="top-menu-item-sep"><div class="top-menu-sep"></div></li>
-							<li class="top-menu-item"><a href="about.html"><span class="item-href">О компании</span></a></li>
+							<li class="top-menu-item item-active"><a href="about.html"><span class="item-href">О компании</span></a></li>
 							<li class="top-menu-item-sep"><div class="top-menu-sep"></div></li>							
 							<li class="top-menu-item"><a href="catalog.html"><span class="item-href">Продукция</span></a></li>
 							<li class="top-menu-item-sep"><div class="top-menu-sep"></div></li>
