--- a/contacts.html
+++ b/contacts.html
@@ -301,7 +301,7 @@
 							<div class="right-menu-box-pad">
 								<ul class="right-menu">
 									<li class="right-menu-item item-active">
-										<a href="about.html">
+										<a href="contacts.html">
 											<span class="item-no-href">Контактная информация</span>
 										</a>	
 									</li>
