--- a/feedback.html
+++ b/feedback.html
@@ -121,7 +121,7 @@
   </div>
   <div id="myLinks">
     <a href="/">Главная</a>
-    <a href="avout.html">О компании</a>
+    <a href="about.html">О компании</a>
     <a href="catalog.html">Продукция</a>
     <a href="contacts.html">Контакты</a>
   </div>
